<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:title="@string/bottom_nav_collection"
            android:id="@+id/bottom_nav_collection"
            android:enabled="true"
            app:showAsAction="ifRoom"
            android:visible="true"
            android:icon="@drawable/box_open"/>
    <item
            android:title="@string/bottom_nav_projects"
            android:id="@+id/bottom_nav_projects"
            android:enabled="true"
            app:showAsAction="ifRoom"
            android:visible="true"
            android:icon="@drawable/toolbox"/>
    <item
            android:title="@string/bottom_nav_patterns"
            android:id="@+id/bottom_nav_patterns"
            android:enabled="true"
            app:showAsAction="ifRoom"
            android:visible="true"
            android:icon="@drawable/book"/>
</menu>
