<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ll_fields"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_category_basic_detail_header"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_marginBottom="@dimen/item_spacing"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="end"
            android:layout_marginBottom="@dimen/item_spacing"
            android:layout_marginStart="@dimen/item_tabbing">
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtlayout_field_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/field_name"
                android:layout_marginBottom="@dimen/item_spacing">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/edittxt_field_name"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start"
                android:layout_marginBottom="@dimen/item_spacing">
            <TextView
                    android:text="@string/field_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    android:layout_marginEnd="@dimen/item_spacing"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"/>
            <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spn_field_type"
                    android:spinnerMode="dropdown"/>
        </LinearLayout>
        <com.google.android.material.switchmaterial.SwitchMaterial
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/switch_show_label"
                android:text="@string/field_show_as_label"/>
    </LinearLayout>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/options"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_marginBottom="@dimen/item_spacing"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="end"
            android:layout_marginBottom="@dimen/item_spacing"
            android:layout_marginStart="@dimen/item_tabbing">
        <ca.tirtech.stash.components.ListBuilder
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lstb_choices"/>
    </LinearLayout>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_category_default_value"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_marginBottom="@dimen/item_spacing"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="end"
            android:layout_marginBottom="@dimen/item_spacing"
            android:layout_marginStart="@dimen/item_tabbing">
        <ca.tirtech.stash.components.FieldEntry
                android:id="@+id/fe_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_spacing"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_marginBottom="@dimen/item_spacing">
        <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel_field_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_marginEnd="@dimen/item_spacing"/>
        <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_confirm_field_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm"/>
    </LinearLayout>
</LinearLayout>
