<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="navController" type="androidx.navigation.NavController"/>
        <variable name="fragment" type="ca.tirtech.stash.fragments.NewCategoryFragment"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
                                                       android:layout_height="match_parent" android:paddingVertical="@dimen/activity_vertical_margin" android:paddingHorizontal="@dimen/activity_horizontal_margin">
        <TextView
                android:text="@string/add_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView3" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edittxt_category_name" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/btn_apply_new_category"
                app:layout_constraintTop_toBottomOf="@+id/textView3" android:hint="@string/category_name"/>
        <Button
                android:text="@string/cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/btn_cancel_new_category" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@+id/btn_apply_new_category" app:layout_constraintStart_toStartOf="parent" android:onClick="@{() -> navController.popBackStack()}"/>
        <Button
                android:text="@string/save"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/btn_apply_new_category" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/btn_cancel_new_category" android:onClick="@{fragment::handleSaveClicked}"/>
        <ca.tirtech.stash.components.MultSelect
                android:layout_width="409dp"
                android:layout_height="291dp"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/btn_cancel_new_category"
                android:layout_marginTop="@dimen/item_spacing"
                app:layout_constraintTop_toBottomOf="@+id/edittxt_category_name"
                android:entries="@array/test_strings"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
