<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="@dimen/activity_vertical_margin"
        android:paddingHorizontal="@dimen/activity_horizontal_margin">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="@dimen/item_spacing"
            app:layout_constraintBottom_toTopOf="@+id/btn_cancel_new_item">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/constraintLayout2"
                app:layout_constraintBottom_toTopOf="@+id/btn_apply_new_item"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="parent">
            <TextView
                    android:text="@string/add_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/item_title"
                    android:id="@+id/txtlayout_item_title"
                    android:layout_marginBottom="@dimen/item_spacing"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/txtlayout_item_description"
                    app:layout_constraintVertical_chainStyle="packed"
                    app:layout_constraintTop_toBottomOf="@+id/textView4">
                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/edittxt_item_title"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtlayout_item_description"
                    android:layout_marginTop="@dimen/item_spacing"
                    android:hint="@string/item_description"
                    app:layout_constraintTop_toBottomOf="@+id/txtlayout_item_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintVertical_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/tv_new_item_fields">
                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:gravity="start|top"
                        android:ems="10"
                        android:id="@+id/edittxt_item_description"/>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_new_item_fields"
                    android:text="@string/new_item_field_header"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    app:layout_constraintTop_toBottomOf="@id/txtlayout_item_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/editor_container"
                    app:layout_constraintVertical_chainStyle="packed"
                    android:layout_marginBottom="@dimen/item_spacing"
                    android:layout_marginTop="@dimen/item_spacing"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editor_container"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/tv_new_item_fields"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintVertical_chainStyle="packed"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="@dimen/item_tabbing"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <com.google.android.material.button.MaterialButton
            android:text="@string/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_cancel_new_item"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_apply_new_item"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="@dimen/item_spacing"/>
    <com.google.android.material.button.MaterialButton
            android:text="@string/save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_apply_new_item"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_cancel_new_item"
            android:layout_marginStart="@dimen/item_spacing"/>
</androidx.constraintlayout.widget.ConstraintLayout>
